--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frazkteco-system",
+  "name": "zkteco-system",
   "version": "1.0.0",
   "description": "ZKTeco MA300 + SLK20R control panel",
   "main": "server.js",
@@ -10,9 +10,8 @@
   "dependencies": {
     "better-sqlite3": "^9.4.3",
     "express": "^4.18.2",
-    "ffi-napi": "^4.0.3",
-    "node-zklib": "^1.1.0",
-    "ref-napi": "^3.0.3"
+    "koffi": "^2.8.4",
+    "node-zklib": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
